--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,4 @@ jobs:
       working-directory: ./python-example-app
     - name: Deploy Pypi
       run: python -m twine upload dist/* --skip-existing -u ${{ secrets.PYPI_CREDENTIALS_USR }} -p ${{ secrets.PYPI_CREDENTIALS_PSW }}
+      working-directory: ./python-example-app
