--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,3 +32,5 @@ jobs:
     - name: Deploy Pypi
       run: python -m twine upload dist/* --skip-existing -u ${{ secrets.PYPI_CREDENTIALS_USR }} -p ${{ secrets.PYPI_CREDENTIALS_PSW }}
       working-directory: ./python-example-app
+    - name: Dokerizacion
+      run: cd docker && docker build -f Dockerfile -t benhelith/github-image-python:latest . 
