--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,5 @@ jobs:
       working-directory: ./python-example-app
     - name: Dokerizacion
       run: cd docker && docker build -f Dockerfile -t benhelith/github-image-python:latest . 
+    - name: Docker hub authentication
+      run: docker login -u=${{ secrets.DOCKER_HUB_USERNAME }} -p=${{ secrets.DOCKER_HUB_PWD }}
